iterative permutations, test for remove